# sec-filings-data

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  main.py  mcp_server.py  mcp_server_all_tools.py  processed_data_index_cache.orjson  pyproject.toml  server.py  settings.py
dataloader/: __init__.py  chunker.py  pipeline.py  repl_env.py  text_splitter.py  vector_store.py
docs/: README.md  performance_and_modularity_audit.md  setup-and-operations.md
earnings_transcripts/: transcripts.py
filings/: __init__.py  sec_data.py  utils.py
finance/dataloader/: repl_env.py
finance/ocr/: olmocr_pipeline.py
finance_data/: __init__.py  api.py  settings.py
finance_data/common/: __init__.py  processed_data_index.py
finance_data/dataloader/: __init__.py  pipeline.py  repl_env.py  reranker.py  sparse_search_utils.py  text_splitter.py  vector_store.py
finance_data/earnings_transcripts/: base.py  transcripts.py
finance_data/filings/: __init__.py  models.py  sec_data.py  utils.py
finance_data/finance_data_api/: cli.py
finance_data/ocr/: olmocr_pipeline.py
finance_data/server_api/: __init__.py  batch_jobs.py  models.py
ocr/: olmocr_pipeline.py  run_ocr.py
server_api/: batch_jobs.py  models.py
