[project]
name = "finance_data_llm"
version = "0.1.11"
description = "SEC filings and Earnings call transcripts data"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.3",
    "aiohttp>=3.11.0",
    "playwright>=1.49",
    "yfinance>=1.2.0",
    "numpy>=1.26",
    "httpx>=0.28.1",
    "vllm>=0.18.1",
]

[project.scripts]
finance-data-llm-server = "finance_data.finance_data_api.cli:main"

[dependency-groups]
ocr-md = [
    "olmocr>=0.4.27",
    "vllm>=0.17.1",
    "guidellm[recommended]>=0.5.4",
    "nvitop>=1.6.2",
    "chromadb>=1.5.5",
    "openai>=1.0",
    "langchain-text-splitters>=0.3.0",
    "markdownify>=0.13.1",
    "rank-bm25>=0.2.2",
]
mcp = [
    "fastmcp>=3.1.1",
    "mcp[cli]>=1.26.0",
]
dev = [
    "black>=24",
    "ty>=0.0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_server", "server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["finance_data*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
extend-exclude = "/(\\.venv|build|dist|.*\\.egg-info)/"
